# GuSp-Planungs-Assistent

./: .claude_TODO.md  .claude_init_prompt.md  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TECHNICAL_SPECIFICATION.md  docker-compose.yml  test_azure_ai.py  test_setup.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  config.py  games.py  health.py  planning.py
backend/app/core/: config.py
backend/app/services/: azure_openai.py  chat_service.py  game_search.py
data/web_data/gusp_pik8-wiki-heimstundenplanung-spiele copy/: sitemap.txt  summary.json
data/web_data/gusp_pik8-wiki-heimstundenplanung-spiele copy/texts/: 002_Datei_Pik8-180.jpg – PIK8.txt  003_Heimstunde – PIK8.txt  004_Kategorie_Heimstunde – PIK8.txt  005_Abenteuer – PIK8.txt  007_Wettbewerb – PIK8.txt  008_Kategorie_Wettbewerb – PIK8.txt  010_Kategorie_Programmidee – PIK8.txt  011_Geschichten weitererzählen – PIK8.txt  012_Knäuel weitergeben – PIK8.txt  013_Porträt-Weitermalen – PIK8.txt  014_Spiel – PIK8.txt  (+495 more)
data/web_data/ppoe_at-ausbildung/: sitemap.txt  summary.json  url-collection.json
data/web_data/ppoe_at-international-internationale-lager-26th-world-scout-jamboree-bravely-polen-#c7126/: url-collection.json
data/web_data/ppoe_at-international-internationale-lager-26th-world-scout-jamboree-bravely-polen-#c7126 copy/: sitemap.txt  summary.json
data/web_data/ppoe_at-meta-termine/: summary.json  url-collection.json
data/web_data/ppoe_at-meta-termine copy/: sitemap.txt
data/web_data/ppoe_at-programm copy/: sitemap.txt  summary.json  url-collection.json
data/web_data/ppoe_at-service-informationen-fuer-pfadfinderinnen/: summary.json  url-collection.json
data/web_data/ppoe_at-service-informationen-fuer-pfadfinderinnen copy/: sitemap.txt
data/web_data/ppoe_at-service-ressourcen/: sitemap.txt  summary.json
data/web_data/ppoe_at-service-ressourcen copy/: url-collection.json
frontend/: Dockerfile  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: dev-setup.sh
(+459 files in other folders)
